...
        Text("This is the default view of the SwiftUI unit test host app.")
    }
}

extension ProcessInfo {
    var customUITestedView: String? {
        guard environment["MyUITestsCustomView"] == "true" else { return nil }
        return environment["MyCustomViewName"]
    }
}

enum SyncType {
    case pbs, fs
}
...
